Fix section header hidden behind toolbar #21

--- a/src/app/pages/story/story.component.scss
+++ b/src/app/pages/story/story.component.scss
@@ -8,17 +8,27 @@ mat-toolbar {
   z-index: 4;
 }
 
+$story-container-margin-top: 100px;
+$toolbar-height: 64px;
+
+app-section-header {
+  padding-top: 1.5 * $toolbar-height;
+  margin-top: - 1.5 * $toolbar-height;
+}
+
+app-map {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .sticky-header {
   position: fixed;
   top: 26px;
   width: 100%;
 }
 
-$story-container-padding-top: 100px;
-$toolbar-height: 64px;
-
 .sticky-container {
-  padding-top: $story-container-padding-top + $toolbar-height !important;
+  margin-top: $story-container-margin-top + $toolbar-height !important;
 }
 
 .story_container {
@@ -29,7 +39,7 @@ $toolbar-height: 64px;
   grid-template-columns: 0.5fr 6fr 0.5fr 2fr;
   grid-template-rows: auto;
   margin: 0 auto;
-  padding-top: $story-container-padding-top;
+  margin-top: $story-container-margin-top;
 }
 
 .story_container > app-text, .story_container > h1, .story_container > h2, .story_container > h3 {
